# pprl-core

./: README.md  pyproject.toml
pprl_core/: __init__.py  bits.py  common.py  harden.py  phonetics_extra.py  similarity.py  transform.py
tests/: test_bits.py  test_common.py  test_harden.py  test_phonetics_extra.py  test_similarity.py  test_transform.py
