[project]
name = "pprl-core"
version = "0.1.4"
description = "Facilities for performing privacy-preserving record linkage with Bloom filters."
authors = [
    {name = "Maximilian Jugl", email = "Maximilian.Jugl@medizin.uni-leipzig.de"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitarray (>=3.0.0,<4)",
    "pyphonetics (>=0.5.0,<1)",
    "unidecode (>=1.3.0,<2)"
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["record linkage", "privacy", "bloom filter", "bitarray", "cryptography"]

[project.urls]
repository = "https://github.com/mjugl/pprl-core"

[tool.poetry]
packages = [{ include = "pprl_core" }]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test."
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.9.0"
pytest = ">=8.3.0"
